Fix alignment

--- a/src/app/shared/arweave-address/arweave-address.component.scss
+++ b/src/app/shared/arweave-address/arweave-address.component.scss
@@ -36,3 +36,6 @@ a {
 	vertical-align: middle;
 	margin-left: 6px;
 }
+.action-btn {
+	margin-left: 6px;
+}
